--- a/app/src/main/res/layout/item_anuncio.xml
+++ b/app/src/main/res/layout/item_anuncio.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="135dp"
+    android:layout_margin="5dp"
+    android:background="#E0E0E0"
     android:gravity="center">
 
     <ImageView
